# sound-server

./: .gitmodules
client/: .gitignore  CMakeLists.txt  Makefile  capture.h  main.cpp
client/port/linux/: capture.cpp
client/port/windows/: capture.cpp  capture.h
common/: resample.cpp  resample.h
server/: Makefile  main.cpp  pid.cpp  pid.h
